--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -116,6 +116,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Common\AppSettings.cs" />
+    <Compile Include="Common\CellModelToTimeLogYearConverter.cs" />
     <Compile Include="Common\CellModelToTimeLogConverter.cs" />
     <Compile Include="Common\Connector.cs" />
     <Compile Include="Common\BindableBase.cs" />
