--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Common\AppSettings.cs" />
     <Compile Include="Converters\CellModelToTimeLogConverter.cs" />
     <Compile Include="Common\Connector.cs" />
+    <Compile Include="Models\AttachmentModel.cs" />
     <Compile Include="Models\BindableBase.cs" />
     <Compile Include="Converters\BooleanNegationConverter.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
