--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -277,8 +277,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\arrow.gif" />
+    <Content Include="Assets\Images\BadgeLogo.png" />
+    <Content Include="Assets\Images\Bluesquare150x150Logo.png" />
+    <Content Include="Assets\Images\Bluesquare24x24Logo.png" />
+    <Content Include="Assets\Images\Bluesquare30x30Logo.png" />
+    <Content Include="Assets\Images\Bluesquare310x310Logo.png" />
+    <Content Include="Assets\Images\Bluesquare70x70Logo.png" />
+    <Content Include="Assets\Images\Splash screen 620x300.scale-100.png" />
+    <Content Include="Assets\Images\Square150x150Logo.png" />
+    <Content Include="Assets\Images\Square30x30Logo.png" />
+    <Content Include="Assets\Images\square310x310Logo.png" />
+    <Content Include="Assets\Images\Square70x70Logo.png" />
+    <Content Include="Assets\Images\StoreLogo.png" />
+    <Content Include="Assets\Images\Wide310x150Logo.png" />
     <Content Include="Assets\Logo.png" />
-    <Content Include="Assets\LogoBig.png" />
+    <Content Include="Assets\LogoBig.scale-100.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
