--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -110,10 +110,12 @@
   <ItemGroup>
     <Compile Include="Interfaces\IChildPage.cs" />
     <Compile Include="Interfaces\IValidatableObject.cs" />
+    <Compile Include="Models\CustomCellTapCommand.cs" />
     <Compile Include="Models\Request\AttachAltTechRequest.cs" />
     <Compile Include="Models\Request\TechniciansRequest.cs" />
     <Compile Include="Models\Request\TransferRequest.cs" />
     <Compile Include="Models\Response\ActivityResponse.cs" />
+    <Compile Include="Models\ViewModels\WorkListPageViewModel.cs" />
     <Compile Include="Transfer.xaml.cs">
       <DependentUpon>Transfer.xaml</DependentUpon>
     </Compile>
