tickets 2177, 2207 & 2220. End the Error Dialog

--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -117,6 +117,7 @@
       <DependentUpon>InviteUser.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\CustomCellTapCommand.cs" />
+    <Compile Include="Models\Request\AddUserRequest.cs" />
     <Compile Include="Models\Request\AttachAltTechRequest.cs" />
     <Compile Include="Models\Request\ProjectSearchRequest.cs" />
     <Compile Include="Models\Request\TechniciansRequest.cs" />
