--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -302,7 +302,7 @@
     <Content Include="Assets\Images\square310x310Logo.png" />
     <Content Include="Assets\Images\Square70x70Logo.png" />
     <Content Include="Assets\Images\StoreLogo.png" />
-    <Content Include="Assets\Images\Wide310x150Logo.png" />
+    <Content Include="Assets\Images\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\LogoBig.scale-100.png" />
     <Content Include="Assets\SmallLogo.png" />
