--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -108,6 +108,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Activity.xaml.cs">
+      <DependentUpon>Activity.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Error.xaml.cs">
       <DependentUpon>Error.xaml</DependentUpon>
     </Compile>
@@ -296,6 +299,7 @@
     <Content Include="Assets\Images\Bluesquare30x30Logo.png" />
     <Content Include="Assets\Images\Bluesquare310x310Logo.png" />
     <Content Include="Assets\Images\Bluesquare70x70Logo.png" />
+    <Content Include="Assets\Images\main-background.png" />
     <Content Include="Assets\Images\Splash screen 620x300.scale-100.png" />
     <Content Include="Assets\Images\Square150x150Logo.png" />
     <Content Include="Assets\Images\Square30x30Logo.png" />
@@ -324,6 +328,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Activity.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Error.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
