--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Models\Request\ProjectSearchRequest.cs" />
     <Compile Include="Models\Request\TechniciansRequest.cs" />
     <Compile Include="Models\Request\TransferRequest.cs" />
+    <Compile Include="Models\Response\AccountStatResponse.cs" />
     <Compile Include="Models\Response\ActivityResponse.cs" />
     <Compile Include="Models\ViewModels\WorkListPageViewModel.cs" />
     <Compile Include="Transfer.xaml.cs">
