--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -317,6 +317,8 @@
     <Content Include="Assets\Images\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\LogoBig.scale-100.png" />
+    <Content Include="Assets\pageNext.png" />
+    <Content Include="Assets\pagePrev.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
