--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -321,6 +321,7 @@
     <Content Include="Assets\Images\face55x55.png" />
     <Content Include="Assets\Images\home-line-devider.png" />
     <Content Include="Assets\Images\main-background.png" />
+    <Content Include="Assets\Images\main-logo-small.png" />
     <Content Include="Assets\Images\Splash screen 620x300.scale-100.png" />
     <Content Include="Assets\Images\Square150x150Logo.png" />
     <Content Include="Assets\Images\Square30x30Logo.png" />
