--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -110,6 +110,7 @@
   <ItemGroup>
     <Compile Include="Models\CustomBeginEditCommand.cs" />
     <Compile Include="Models\ViewModels\ChartDataModel.cs" />
+    <Compile Include="Models\ViewModels\TimeLogsModel.cs" />
     <Compile Include="TimeLogs.xaml.cs">
       <DependentUpon>TimeLogs.xaml</DependentUpon>
     </Compile>
