Changes for End User mode

--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -109,6 +109,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Models\CustomBeginEditCommand.cs" />
+    <Compile Include="Models\Response\ConfigResponse.cs" />
     <Compile Include="Models\ViewModels\ChartDataModel.cs" />
     <Compile Include="TimeLogs.xaml.cs">
       <DependentUpon>TimeLogs.xaml</DependentUpon>
