--- a/SherpaDesk/packages.config
+++ b/SherpaDesk/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="WinRTXamlToolkit" version="1.5.4.3" targetFramework="winrt45" />
+  <package id="NLog" version="1.0.0.505" targetFramework="win81" />
+  <package id="winrtxamltoolkit" version="1.6.1.3" targetFramework="win81" />
 </packages>
